# baseball-data-project

./: .gitignore  CHANGELOG.md  README.md  config.toml  pyproject.toml
baseball_data_project/scripts/: certificate.pem  clean_game_log_data.py  cli.py  data_validator.py  extract_game_log_data.py  extract_roster_data.py  extract_team_data.py  qa_pitch_info_data.py  utils.py  very_ssl_connection.py
baseball_data_project/scripts/data_extraction/: extract_game_log_data.py  extract_roster_data.py  extract_team_data.py
baseball_data_project/scripts/data_qa/: data_validator.py  qa_pitch_info_data.py
